@@ -44,6 +44,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #23209, #23225: selectors.BaseSelector.close() now clears its internal
+  reference to the selector mapping to break a reference cycle. Initial patch
+  written by Martin Richard.
+
 - Issue #21356: Make ssl.RAND_egd() optional to support LibreSSL. The
   availability of the function is checked during the compilation. Patch written
   by Bernard Spil.
